syntax = "proto3";

package github.com.jindezgm.gmap;
option go_package = "gmap";

message ProtoValue {}